Update on DYDX parser

--- a/notebooks/01-airdrop-dataset.ipynb
+++ b/notebooks/01-airdrop-dataset.ipynb
@@ -46,22 +46,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ethereum import (to_checksum_address, get_contract,\n",
-    "                      get_all_events_from_contract, get_blocks,\n",
+    "from ethereum import (get_contract,\n",
+    "                      get_all_events_from_contract,\n",
     "                      get_batch_intervals, get_transactions)\n",
     "from utils import Utils"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dict_keys(['ens', 'ens_register', 'dydx', 'compound', 'uniswap', 'sushi', '1inch', 'tornadocash', 'worldcoin', 'lido', 'lido-token', 'arkham-token', 'arkham-airdrop'])\n"
+      "dict_keys(['ens', 'ens_register', 'dydx', 'dydx-merkle-distributor', 'compound', 'uniswap', 'sushi', '1inch', 'tornadocash', 'worldcoin', 'lido', 'lido-token', 'arkham-token', 'arkham-airdrop'])\n"
      ]
     }
    ],
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
      "output_type": "stream",
      "text": [
       "Is connected to Ethereum node:  True\n",
-      "The most recent block is:  21873995\n"
+      "The most recent block is:  22174062\n"
      ]
     }
    ],
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,13 +172,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "ens\n",
+      "\t Approval\n",
+      "\t Claim\n",
+      "\t DelegateChanged\n",
+      "\t DelegateVotesChanged\n",
+      "\t MerkleRootChanged\n",
+      "\t OwnershipTransferred\n",
+      "\t Transfer\n",
+      "ens_register\n",
+      "\t NameRegistered\n",
+      "\t NameRenewed\n",
+      "\t OwnershipTransferred\n",
+      "dydx\n",
+      "\t Approval\n",
+      "\t DelegateChanged\n",
+      "\t DelegatedPowerChanged\n",
+      "\t OwnershipTransferred\n",
+      "\t Transfer\n",
+      "\t TransferAllowlistUpdated\n",
+      "\t TransfersRestrictedBeforeUpdated\n",
+      "dydx-merkle-distributor\n",
+      "\t AlwaysAllowClaimForUpdated\n",
+      "\t EpochScheduleUpdated\n",
+      "\t IpfsUpdatePeriodUpdated\n",
+      "\t IpnsNameUpdated\n",
+      "\t RewardsClaimed\n",
+      "\t RewardsOracleChanged\n",
+      "\t RewardsParametersUpdated\n",
+      "\t RoleAdminChanged\n",
+      "\t RoleGranted\n",
+      "\t RoleRevoked\n",
+      "\t RootProposed\n",
+      "\t RootUpdated\n",
+      "\t RootUpdatesPaused\n",
+      "\t RootUpdatesUnpaused\n",
+      "compound\n",
+      "\t Approval\n",
+      "\t DelegateChanged\n",
+      "\t DelegateVotesChanged\n",
+      "\t Transfer\n",
+      "uniswap\n",
+      "\t Approval\n",
+      "\t DelegateChanged\n",
+      "\t DelegateVotesChanged\n",
+      "\t MinterChanged\n",
+      "\t Transfer\n",
+      "sushi\n",
+      "\t Approval\n",
+      "\t DelegateChanged\n",
+      "\t DelegateVotesChanged\n",
+      "\t OwnershipTransferred\n",
+      "\t Transfer\n",
+      "1inch\n",
+      "\t Approval\n",
+      "\t OwnershipTransferred\n",
+      "\t Transfer\n",
+      "tornadocash\n",
+      "\t Allowed\n",
+      "\t Approval\n",
+      "\t Disallowed\n",
+      "\t Paused\n",
+      "\t Transfer\n",
+      "\t Unpaused\n",
+      "worldcoin\n",
+      "\t Approval\n",
+      "\t InflationTokensMinted\n",
+      "\t OwnershipTransferStarted\n",
+      "\t OwnershipTransferred\n",
+      "\t TokenUpdated\n",
+      "\t TokensMinted\n",
+      "\t Transfer\n",
+      "lido\n",
+      "\t Claimed\n",
+      "lido-token\n",
+      "\t Approval\n",
+      "\t ClaimedTokens\n",
+      "\t NewCloneToken\n",
+      "\t Transfer\n",
+      "arkham-token\n",
+      "\t AdminChanged\n",
+      "\t Approval\n",
+      "\t BeaconUpgraded\n",
+      "\t Initialized\n",
+      "\t OwnershipTransferred\n",
+      "\t Paused\n",
+      "\t Transfer\n",
+      "\t Unpaused\n",
+      "\t Upgraded\n",
       "arkham-airdrop\n",
       "\t Claimed\n",
       "\t OwnershipTransferred\n"
