--- a/notebooks/02-generate-dataframes.ipynb
+++ b/notebooks/02-generate-dataframes.ipynb
@@ -17,7 +17,7 @@
     {
      "data": {
       "text/plain": [
-       "<polars.config.Config at 0x11855da60>"
+       "<polars.config.Config at 0x10701ce90>"
       ]
      },
      "execution_count": 1,
@@ -56,7 +56,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dict_keys(['ens', 'ens_register', 'dydx', 'compound', 'uniswap', 'sushi', '1inch', 'tornadocash', 'worldcoin', 'lido', 'lido-token', 'arkham-token', 'arkham-airdrop'])\n"
+      "dict_keys(['ens', 'ens_register', 'dydx', 'dydx-merkle-distributor', 'compound', 'uniswap', 'sushi', '1inch', 'tornadocash', 'worldcoin', 'lido', 'lido-token', 'arkham-token', 'arkham-airdrop'])\n"
      ]
     }
    ],
@@ -98,6 +98,7 @@
        " 'arkham-token',\n",
        " 'compound',\n",
        " 'dydx',\n",
+       " 'dydx-merkle-distributor',\n",
        " 'ens',\n",
        " 'ens_register',\n",
        " 'lido',\n",
@@ -881,14 +882,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading Transfer events: 100%|██████████| 796672/796672 [00:00<00:00, 953784.16it/s]\n"
+      "Loading Transfer events: 100%|██████████| 796672/796672 [00:00<00:00, 844735.67it/s]\n"
      ]
     },
     {
@@ -942,7 +943,7 @@
        "└───────────┴───────────┴───────────┴───────────┴───┴───────────┴───────────┴───────────┴──────────┘"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -958,14 +959,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading Claim events: 100%|██████████| 73115/73115 [00:00<00:00, 904204.96it/s]\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are 88757 Claim events\n"
+      "There are 72870 Claim events\n"
      ]
     },
     {
@@ -978,56 +986,77 @@
        "  white-space: pre-wrap;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (5, 11)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>blockNumber</th><th>transactionHash</th><th>blockHash</th><th>address</th><th>transactionIndex</th><th>logIndex</th><th>event</th><th>from</th><th>to</th><th>amount</th><th>timestamp</th></tr><tr><td>i64</td><td>str</td><td>str</td><td>str</td><td>i64</td><td>i64</td><td>str</td><td>str</td><td>str</td><td>f64</td><td>datetime[ns]</td></tr></thead><tbody><tr><td>13183164</td><td>&quot;361400ec679147ed4575ac2215de48…</td><td>&quot;66eebcd18b681919affcf267100740…</td><td>&quot;0x92d6c1e31e14520e676a687f0a93…</td><td>18</td><td>35</td><td>&quot;Transfer&quot;</td><td>&quot;0x639192d54431f8c816368d3fb410…</td><td>&quot;0x54af6a1dbacfa9dddd72a7dd1b4f…</td><td>1.584922969314624952e-1</td><td>2021-09-08 05:24:48</td></tr><tr><td>13185646</td><td>&quot;53629569beb5d8dd590edc169ea093…</td><td>&quot;c9adf2ffc238e0fe42ad28cad4fb74…</td><td>&quot;0x92d6c1e31e14520e676a687f0a93…</td><td>118</td><td>184</td><td>&quot;Transfer&quot;</td><td>&quot;0x639192d54431f8c816368d3fb410…</td><td>&quot;0x75dc9a12bf02565136ddf3e27fcb…</td><td>0.000000000000000000e0</td><td>2021-09-08 14:23:45</td></tr><tr><td>13185813</td><td>&quot;751c7b32ba3ed77f59dc2776a910dc…</td><td>&quot;bab2daf7004c944c5311039628208f…</td><td>&quot;0x92d6c1e31e14520e676a687f0a93…</td><td>23</td><td>100</td><td>&quot;Transfer&quot;</td><td>&quot;0x639192d54431f8c816368d3fb410…</td><td>&quot;0x8568e1a8082b442ae9be089a3b38…</td><td>1.178209769696859667e3</td><td>2021-09-08 15:00:53</td></tr><tr><td>13185813</td><td>&quot;f1664ae2da908ee8a71e88afe86d25…</td><td>&quot;bab2daf7004c944c5311039628208f…</td><td>&quot;0x92d6c1e31e14520e676a687f0a93…</td><td>156</td><td>240</td><td>&quot;Transfer&quot;</td><td>&quot;0x639192d54431f8c816368d3fb410…</td><td>&quot;0x44acd0ff3be9fdfb932453c82b5d…</td><td>4.350810345703857820e3</td><td>2021-09-08 15:00:53</td></tr><tr><td>13185813</td><td>&quot;0f6a0ed8d5e6854709e12d57bb65b6…</td><td>&quot;bab2daf7004c944c5311039628208f…</td><td>&quot;0x92d6c1e31e14520e676a687f0a93…</td><td>158</td><td>252</td><td>&quot;Transfer&quot;</td><td>&quot;0x639192d54431f8c816368d3fb410…</td><td>&quot;0xf7e39bfa90e8501fe2f2a1333e3e…</td><td>1.163646413569437755e3</td><td>2021-09-08 15:00:53</td></tr></tbody></table></div>"
+       "<small>shape: (5, 10)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>blockNumber</th><th>transactionHash</th><th>blockHash</th><th>address</th><th>transactionIndex</th><th>logIndex</th><th>event</th><th>account</th><th>amount</th><th>timestamp</th></tr><tr><td>i64</td><td>str</td><td>str</td><td>str</td><td>i64</td><td>i64</td><td>str</td><td>str</td><td>f64</td><td>datetime[ns]</td></tr></thead><tbody><tr><td>13183164</td><td>&quot;361400ec679147ed4575ac2215de48…</td><td>&quot;66eebcd18b681919affcf267100740…</td><td>&quot;0x01d3348601968ab85b4bb0289790…</td><td>18</td><td>37</td><td>&quot;RewardsClaimed&quot;</td><td>&quot;0x54af6a1dbacfa9dddd72a7dd1b4f…</td><td>1.584922969314624952e-1</td><td>2021-09-08 05:24:48</td></tr><tr><td>13185813</td><td>&quot;751c7b32ba3ed77f59dc2776a910dc…</td><td>&quot;bab2daf7004c944c5311039628208f…</td><td>&quot;0x01d3348601968ab85b4bb0289790…</td><td>23</td><td>102</td><td>&quot;RewardsClaimed&quot;</td><td>&quot;0x8568e1a8082b442ae9be089a3b38…</td><td>1.178209769696859667e3</td><td>2021-09-08 15:00:53</td></tr><tr><td>13185813</td><td>&quot;f1664ae2da908ee8a71e88afe86d25…</td><td>&quot;bab2daf7004c944c5311039628208f…</td><td>&quot;0x01d3348601968ab85b4bb0289790…</td><td>156</td><td>242</td><td>&quot;RewardsClaimed&quot;</td><td>&quot;0x44acd0ff3be9fdfb932453c82b5d…</td><td>4.350810345703857820e3</td><td>2021-09-08 15:00:53</td></tr><tr><td>13185813</td><td>&quot;0f6a0ed8d5e6854709e12d57bb65b6…</td><td>&quot;bab2daf7004c944c5311039628208f…</td><td>&quot;0x01d3348601968ab85b4bb0289790…</td><td>158</td><td>254</td><td>&quot;RewardsClaimed&quot;</td><td>&quot;0xf7e39bfa90e8501fe2f2a1333e3e…</td><td>1.163646413569437755e3</td><td>2021-09-08 15:00:53</td></tr><tr><td>13185813</td><td>&quot;9087ed3f61e5d0f1d98a89ba35e982…</td><td>&quot;bab2daf7004c944c5311039628208f…</td><td>&quot;0x01d3348601968ab85b4bb0289790…</td><td>238</td><td>348</td><td>&quot;RewardsClaimed&quot;</td><td>&quot;0x85a60b688a8057683fd4b46f4268…</td><td>6.478038445727037470e3</td><td>2021-09-08 15:00:53</td></tr></tbody></table></div>"
       ],
       "text/plain": [
-       "shape: (5, 11)\n",
+       "shape: (5, 10)\n",
        "┌───────────┬───────────┬───────────┬───────────┬───┬───────────┬───────────┬───────────┬──────────┐\n",
-       "│ blockNumb ┆ transacti ┆ blockHash ┆ address   ┆ … ┆ from      ┆ to        ┆ amount    ┆ timestam │\n",
+       "│ blockNumb ┆ transacti ┆ blockHash ┆ address   ┆ … ┆ event     ┆ account   ┆ amount    ┆ timestam │\n",
        "│ er        ┆ onHash    ┆ ---       ┆ ---       ┆   ┆ ---       ┆ ---       ┆ ---       ┆ p        │\n",
        "│ ---       ┆ ---       ┆ str       ┆ str       ┆   ┆ str       ┆ str       ┆ f64       ┆ ---      │\n",
        "│ i64       ┆ str       ┆           ┆           ┆   ┆           ┆           ┆           ┆ datetime │\n",
        "│           ┆           ┆           ┆           ┆   ┆           ┆           ┆           ┆ [ns]     │\n",
        "╞═══════════╪═══════════╪═══════════╪═══════════╪═══╪═══════════╪═══════════╪═══════════╪══════════╡\n",
-       "│ 13183164  ┆ 361400ec6 ┆ 66eebcd18 ┆ 0x92d6c1e ┆ … ┆ 0x639192d ┆ 0x54af6a1 ┆ 1.5849229 ┆ 2021-09- │\n",
-       "│           ┆ 79147ed45 ┆ b681919af ┆ 31e14520e ┆   ┆ 54431f8c8 ┆ dbacfa9dd ┆ 693146249 ┆ 08       │\n",
-       "│           ┆ 75ac2215d ┆ fcf267100 ┆ 676a687f0 ┆   ┆ 16368d3fb ┆ dd72a7dd1 ┆ 52e-1     ┆ 05:24:48 │\n",
-       "│           ┆ e48…      ┆ 740…      ┆ a93…      ┆   ┆ 410…      ┆ b4f…      ┆           ┆          │\n",
-       "│ 13185646  ┆ 53629569b ┆ c9adf2ffc ┆ 0x92d6c1e ┆ … ┆ 0x639192d ┆ 0x75dc9a1 ┆ 0.0000000 ┆ 2021-09- │\n",
-       "│           ┆ eb5d8dd59 ┆ 238e0fe42 ┆ 31e14520e ┆   ┆ 54431f8c8 ┆ 2bf025651 ┆ 000000000 ┆ 08       │\n",
-       "│           ┆ 0edc169ea ┆ ad28cad4f ┆ 676a687f0 ┆   ┆ 16368d3fb ┆ 36ddf3e27 ┆ 00e0      ┆ 14:23:45 │\n",
-       "│           ┆ 093…      ┆ b74…      ┆ a93…      ┆   ┆ 410…      ┆ fcb…      ┆           ┆          │\n",
-       "│ 13185813  ┆ 751c7b32b ┆ bab2daf70 ┆ 0x92d6c1e ┆ … ┆ 0x639192d ┆ 0x8568e1a ┆ 1.1782097 ┆ 2021-09- │\n",
-       "│           ┆ a3ed77f59 ┆ 04c944c53 ┆ 31e14520e ┆   ┆ 54431f8c8 ┆ 8082b442a ┆ 696968596 ┆ 08       │\n",
-       "│           ┆ dc2776a91 ┆ 110396282 ┆ 676a687f0 ┆   ┆ 16368d3fb ┆ e9be089a3 ┆ 67e3      ┆ 15:00:53 │\n",
-       "│           ┆ 0dc…      ┆ 08f…      ┆ a93…      ┆   ┆ 410…      ┆ b38…      ┆           ┆          │\n",
-       "│ 13185813  ┆ f1664ae2d ┆ bab2daf70 ┆ 0x92d6c1e ┆ … ┆ 0x639192d ┆ 0x44acd0f ┆ 4.3508103 ┆ 2021-09- │\n",
-       "│           ┆ a908ee8a7 ┆ 04c944c53 ┆ 31e14520e ┆   ┆ 54431f8c8 ┆ f3be9fdfb ┆ 457038578 ┆ 08       │\n",
-       "│           ┆ 1e88afe86 ┆ 110396282 ┆ 676a687f0 ┆   ┆ 16368d3fb ┆ 932453c82 ┆ 20e3      ┆ 15:00:53 │\n",
-       "│           ┆ d25…      ┆ 08f…      ┆ a93…      ┆   ┆ 410…      ┆ b5d…      ┆           ┆          │\n",
-       "│ 13185813  ┆ 0f6a0ed8d ┆ bab2daf70 ┆ 0x92d6c1e ┆ … ┆ 0x639192d ┆ 0xf7e39bf ┆ 1.1636464 ┆ 2021-09- │\n",
-       "│           ┆ 5e6854709 ┆ 04c944c53 ┆ 31e14520e ┆   ┆ 54431f8c8 ┆ a90e8501f ┆ 135694377 ┆ 08       │\n",
-       "│           ┆ e12d57bb6 ┆ 110396282 ┆ 676a687f0 ┆   ┆ 16368d3fb ┆ e2f2a1333 ┆ 55e3      ┆ 15:00:53 │\n",
-       "│           ┆ 5b6…      ┆ 08f…      ┆ a93…      ┆   ┆ 410…      ┆ e3e…      ┆           ┆          │\n",
+       "│ 13183164  ┆ 361400ec6 ┆ 66eebcd18 ┆ 0x01d3348 ┆ … ┆ RewardsCl ┆ 0x54af6a1 ┆ 1.5849229 ┆ 2021-09- │\n",
+       "│           ┆ 79147ed45 ┆ b681919af ┆ 601968ab8 ┆   ┆ aimed     ┆ dbacfa9dd ┆ 693146249 ┆ 08       │\n",
+       "│           ┆ 75ac2215d ┆ fcf267100 ┆ 5b4bb0289 ┆   ┆           ┆ dd72a7dd1 ┆ 52e-1     ┆ 05:24:48 │\n",
+       "│           ┆ e48…      ┆ 740…      ┆ 790…      ┆   ┆           ┆ b4f…      ┆           ┆          │\n",
+       "│ 13185813  ┆ 751c7b32b ┆ bab2daf70 ┆ 0x01d3348 ┆ … ┆ RewardsCl ┆ 0x8568e1a ┆ 1.1782097 ┆ 2021-09- │\n",
+       "│           ┆ a3ed77f59 ┆ 04c944c53 ┆ 601968ab8 ┆   ┆ aimed     ┆ 8082b442a ┆ 696968596 ┆ 08       │\n",
+       "│           ┆ dc2776a91 ┆ 110396282 ┆ 5b4bb0289 ┆   ┆           ┆ e9be089a3 ┆ 67e3      ┆ 15:00:53 │\n",
+       "│           ┆ 0dc…      ┆ 08f…      ┆ 790…      ┆   ┆           ┆ b38…      ┆           ┆          │\n",
+       "│ 13185813  ┆ f1664ae2d ┆ bab2daf70 ┆ 0x01d3348 ┆ … ┆ RewardsCl ┆ 0x44acd0f ┆ 4.3508103 ┆ 2021-09- │\n",
+       "│           ┆ a908ee8a7 ┆ 04c944c53 ┆ 601968ab8 ┆   ┆ aimed     ┆ f3be9fdfb ┆ 457038578 ┆ 08       │\n",
+       "│           ┆ 1e88afe86 ┆ 110396282 ┆ 5b4bb0289 ┆   ┆           ┆ 932453c82 ┆ 20e3      ┆ 15:00:53 │\n",
+       "│           ┆ d25…      ┆ 08f…      ┆ 790…      ┆   ┆           ┆ b5d…      ┆           ┆          │\n",
+       "│ 13185813  ┆ 0f6a0ed8d ┆ bab2daf70 ┆ 0x01d3348 ┆ … ┆ RewardsCl ┆ 0xf7e39bf ┆ 1.1636464 ┆ 2021-09- │\n",
+       "│           ┆ 5e6854709 ┆ 04c944c53 ┆ 601968ab8 ┆   ┆ aimed     ┆ a90e8501f ┆ 135694377 ┆ 08       │\n",
+       "│           ┆ e12d57bb6 ┆ 110396282 ┆ 5b4bb0289 ┆   ┆           ┆ e2f2a1333 ┆ 55e3      ┆ 15:00:53 │\n",
+       "│           ┆ 5b6…      ┆ 08f…      ┆ 790…      ┆   ┆           ┆ e3e…      ┆           ┆          │\n",
+       "│ 13185813  ┆ 9087ed3f6 ┆ bab2daf70 ┆ 0x01d3348 ┆ … ┆ RewardsCl ┆ 0x85a60b6 ┆ 6.4780384 ┆ 2021-09- │\n",
+       "│           ┆ 1e5d0f1d9 ┆ 04c944c53 ┆ 601968ab8 ┆   ┆ aimed     ┆ 88a805768 ┆ 457270374 ┆ 08       │\n",
+       "│           ┆ 8a89ba35e ┆ 110396282 ┆ 5b4bb0289 ┆   ┆           ┆ 3fd4b46f4 ┆ 70e3      ┆ 15:00:53 │\n",
+       "│           ┆ 982…      ┆ 08f…      ┆ 790…      ┆   ┆           ┆ 268…      ┆           ┆          │\n",
        "└───────────┴───────────┴───────────┴───────────┴───┴───────────┴───────────┴───────────┴──────────┘"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dydx_claiming_address = \"0x639192d54431f8c816368d3fb4107bc168d0e871\"\n",
-    "dydx_claim_pl = dydx_transfer_pl.filter(\n",
-    "    pl.col(\"from\").eq(dydx_claiming_address))\n",
+    "protocol_name = 'dydx-merkle-distributor'\n",
+    "# Treasury Merkle Claim Proxy\n",
+    "dydx_address_to_ignore = \"0x95eabb0248d013b9f59c5d5256ce11b0a8140b54\"\n",
+    "dydx_claim_pl = load_claim(protocol_name, amount_column=\"amount\",\n",
+    "                           event_claim=\"RewardsClaimed\", account_column=\"account\")\n",
+    "dydx_claim_pl = (\n",
+    "    dydx_claim_pl\n",
+    "    .filter(pl.col(\"account\").ne(dydx_address_to_ignore))\n",
+    "    .with_columns(pl.col('amount').truediv(\n",
+    "        10**contract_settings[protocol_name]['decimals']).alias('amount'))\n",
+    ")\n",
     "print('There are {} Claim events'.format(len(dydx_claim_pl)))\n",
     "dydx_claim_pl.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dydx_claiming_address = \"0x639192d54431f8c816368d3fb4107bc168d0e871\"\n",
+    "# dydx_claim_pl = dydx_transfer_pl.filter(\n",
+    "#     pl.col(\"from\").eq(dydx_claiming_address))\n",
+    "# print('There are {} Claim events'.format(len(dydx_claim_pl)))\n",
+    "# dydx_claim_pl.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
