Restructure the code

--- a/notebooks/01-airdrop-dataset.ipynb
+++ b/notebooks/01-airdrop-dataset.ipynb
@@ -17,12 +17,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Standard Library Imports\n",
     "import gzip\n",
     "import pickle\n",
+    "\n",
+    "# Third-Party Libraries\n",
     "from tqdm import tqdm\n",
     "import requests as re"
    ]
