--- a/notebooks/01b-exchanges-dataset.ipynb
+++ b/notebooks/01b-exchanges-dataset.ipynb
@@ -2,22 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Install the dune-client package if you haven't already\n",
-    "# pip install dune-client\n",
+    "# Install the dune-client package if not already installed\n",
+    "# !pip install dune-client\n",
     "\n",
-    "from dune_client.client import DuneClient\n",
-    "\n",
-    "import polars as pl\n",
+    "# Standard Library Imports\n",
+    "import logging\n",
     "from io import StringIO\n",
     "\n",
-    "import logging\n",
+    "# Third-Party Libraries\n",
+    "import polars as pl\n",
+    "from dune_client.client import DuneClient\n",
     "\n",
-    "# Set the logging level for the dune_client module to WARNING to suppress INFO logs\n",
-    "logging.getLogger('dune_client').setLevel(logging.WARNING)"
+    "# Polars Configuration\n",
+    "pl.Config.set_float_precision(18)\n",
+    "\n",
+    "# Logging Configuration\n",
+    "logging.basicConfig(level=logging.WARNING)\n",
+    "logging.getLogger('dune_client').setLevel(logging.WARNING)\n"
    ]
   },
   {
