--- a/notebooks/02-generate-dataframes.ipynb
+++ b/notebooks/02-generate-dataframes.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -26,12 +26,17 @@
     }
    ],
    "source": [
+    "# Standard Library Imports\n",
     "import gzip\n",
     "import pickle\n",
+    "\n",
+    "# Third-Party Libraries\n",
     "from tqdm.notebook import tqdm\n",
     "import pandas as pd\n",
     "import polars as pl\n",
-    "pl.Config(set_float_precision=18)"
+    "\n",
+    "# Polars Configuration\n",
+    "pl.Config.set_float_precision(18)"
    ]
   },
   {
