Updated exchange analysis

--- a/notebooks/01b-exchanges-dataset.ipynb
+++ b/notebooks/01b-exchanges-dataset.ipynb
@@ -112,7 +112,7 @@
     "      .rename({\"cex_name\": \"name\"})\n",
     "      )\n",
     "\n",
-    "file_dir = os.path.join(data_dir, \"cex_addresses.csv\")\n",
+    "file_dir = os.path.join(data_dir, \"cex_addresses_2.csv\")\n",
     "df.write_csv(file_dir)\n",
     "\n",
     "df.head()"
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
     "      .rename({\"dex_name\": \"name\"})\n",
     "      )\n",
     "\n",
-    "file_dir = os.path.join(data_dir, \"dex_addresses.csv\")\n",
+    "file_dir = os.path.join(data_dir, \"dex_addresses_2.csv\")\n",
     "df.write_csv(file_dir)\n",
     "\n",
     "df.head()"
