Implemented a code to compute the number of hops each of the airdrop claimers took to reach an exchange. The code leverages n-1 CPU cores available.

--- a/notebooks/03-airdrop-eda.ipynb
+++ b/notebooks/03-airdrop-eda.ipynb
@@ -2939,6 +2939,26 @@
     "    plots_dir, \"number_of_blocks_until_exchange_log.pdf\")\n",
     "fig.show(\"png\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target_addresses = exchange_addresses_set.copy()\n",
+    "with open(os.path.join(data_dir, \"exchanges_addresses.json\"), \"w\") as f:\n",
+    "    json.dump(list(target_addresses), f)\n",
+    "\n",
+    "claim_receivers = dict()\n",
+    "for protocol, data in dfs.items():\n",
+    "    claim_receivers[protocol] = data['claim'].select(\n",
+    "        pl.col(\"receiver\").unique()\n",
+    "        ).collect()['receiver'].to_list()\n",
+    "\n",
+    "with open(os.path.join(data_dir, \"claim_receivers_addresses.json\"), \"w\") as f:\n",
+    "    json.dump(claim_receivers, f)"
+   ]
   }
  ],
  "metadata": {
