--- a/notebooks/04-airdrop-token-sold-at-exchanges.ipynb
+++ b/notebooks/04-airdrop-token-sold-at-exchanges.ipynb
@@ -28,7 +28,6 @@
    "source": [
     "# Standard Library Imports\n",
     "import os\n",
-    "import gzip\n",
     "\n",
     "# Third-Party Libraries\n",
     "import polars as pl\n",
@@ -129,7 +128,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "daef9df0cdcb4da5a9b24b661b22297a",
+       "model_id": "14488ac7ccf142ff871b81f85926d57d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -301,7 +300,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "19412ddd24204b91ac96bfe28ad9ac9c",
+       "model_id": "50e4c3c2a63748649013825044451b51",
        "version_major": 2,
        "version_minor": 0
       },
@@ -323,7 +322,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c295a80839e64fc7bd73273aeddb80b6",
+       "model_id": "d327ea225e6c46d89fa7981cd00d730d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -345,7 +344,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "12d4124805ff40debc4a25eb619d84b6",
+       "model_id": "b8601b66faea4965861853e41e8ae0ce",
        "version_major": 2,
        "version_minor": 0
       },
@@ -367,7 +366,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6fb86d7d722a4888af22404d8deab8e4",
+       "model_id": "139540065bc243139475c4cbe9d0d921",
        "version_major": 2,
        "version_minor": 0
       },
@@ -389,7 +388,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "56875d433b624c5d93fe33a78d56f3ea",
+       "model_id": "c45b41e8d91446b1965c3553dae2804f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -411,7 +410,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5888361951fb4edca0f8cc84c3e36119",
+       "model_id": "9baef35604654f679afb8e9353f66ec0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -433,7 +432,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c1a9ce12fc5f49498876288e11311fc7",
+       "model_id": "c47cab5ebef04ebb872a3e978dd40369",
        "version_major": 2,
        "version_minor": 0
       },
@@ -455,7 +454,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4e18cea171844a9c9dfb46cc87acd065",
+       "model_id": "4e2df84039634fd7bbdc1df64d4a5d7b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -477,7 +476,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "acb3953dc02c4624832e95ada4102897",
+       "model_id": "7301450723824c1dad3a5b86260b9999",
        "version_major": 2,
        "version_minor": 0
       },
@@ -499,7 +498,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "604063a2974941208c83c47295fe7299",
+       "model_id": "23d40bbe451f4c96b16f813e129a7289",
        "version_major": 2,
        "version_minor": 0
       },
@@ -533,7 +532,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "08d805a3d21246c082eb3a516bddfd50",
+       "model_id": "31fe20cf78fa4ab79107298024830c05",
        "version_major": 2,
        "version_minor": 0
       },
@@ -548,16 +547,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The exchange balance for ens is 10710927.81554785\n",
-      "The exchange balance for dydx is 116277337.90959203\n",
-      "The exchange balance for 1inch is 557717062.2673184\n",
+      "The exchange balance for ens is 10710927.815547846\n",
+      "The exchange balance for dydx is 116277337.90959202\n",
+      "The exchange balance for 1inch is 557717062.2673186\n",
       "The exchange balance for gemstone is 291997156478789.5\n",
-      "The exchange balance for arbitrum is 852070646.5485427\n",
-      "The exchange balance for optimism is 242895481.68695247\n",
-      "The exchange balance for uniswap is 79325697.70988528\n",
-      "The exchange balance for arkham is 143835350.313715\n",
-      "The exchange balance for lido is 155404705.45286748\n",
-      "The exchange balance for tornado is 669218.6397018757\n"
+      "The exchange balance for arbitrum is 852070646.5485424\n",
+      "The exchange balance for optimism is 242895481.68695226\n",
+      "The exchange balance for uniswap is 79325697.70988522\n",
+      "The exchange balance for arkham is 143835350.31371492\n",
+      "The exchange balance for lido is 155404705.45286745\n",
+      "The exchange balance for tornado is 669218.639701876\n"
      ]
     }
    ],
@@ -576,23 +575,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ens 54.55725354924504\n",
-      "dydx 69.41434878805683\n",
-      "1inch 666.7841259258996\n",
+      "ens 54.557253549245026\n",
+      "dydx 69.41434878805681\n",
+      "1inch 666.7841259259\n",
       "gemstone 0.5794195062460137\n",
-      "arbitrum 77.97050511900203\n",
-      "optimism 146.10073897765383\n",
-      "uniswap 57.88485748986848\n",
-      "arkham 489.32713756466785\n",
-      "lido 3913.4462938739834\n",
-      "tornado 133.84372794037515\n"
+      "arbitrum 77.97050511900198\n",
+      "optimism 146.1007389776537\n",
+      "uniswap 57.88485748986844\n",
+      "arkham 489.32713756466757\n",
+      "lido 3913.446293873983\n",
+      "tornado 133.84372794037517\n"
      ]
     }
    ],
@@ -607,25 +606,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'ens': 10710927.81554785,\n",
-       " 'dydx': 116277337.90959203,\n",
-       " '1inch': 557717062.2673184,\n",
+       "{'ens': 10710927.815547846,\n",
+       " 'dydx': 116277337.90959202,\n",
+       " '1inch': 557717062.2673186,\n",
        " 'gemstone': 291997156478789.5,\n",
-       " 'arbitrum': 852070646.5485427,\n",
-       " 'optimism': 242895481.68695247,\n",
-       " 'uniswap': 79325697.70988528,\n",
-       " 'arkham': 143835350.313715,\n",
-       " 'lido': 155404705.45286748,\n",
-       " 'tornado': 669218.6397018757}"
+       " 'arbitrum': 852070646.5485424,\n",
+       " 'optimism': 242895481.68695226,\n",
+       " 'uniswap': 79325697.70988522,\n",
+       " 'arkham': 143835350.31371492,\n",
+       " 'lido': 155404705.45286745,\n",
+       " 'tornado': 669218.639701876}"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -636,38 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# exhance_nodes = dict()\n",
-    "# for protocol in protocols:\n",
-    "#     exhance_nodes[protocol] = list()\n",
-    "#     for node in subgraphs[protocol].nodes():\n",
-    "#         if node in exchange_addresses_set:\n",
-    "#             exhance_nodes[protocol].append(node)\n",
-    "#     print(protocol, len(exhance_nodes[protocol]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# balances = dict()\n",
-    "# for protocol in tqdm(protocols):\n",
-    "#     amount = 0\n",
-    "#     for node in exchange_addresses_set:\n",
-    "#         edges = subgraphs[protocol].in_edges(node, data=True)\n",
-    "#         amount += sum([float(edge[2]['amount']) for edge in edges])\n",
-    "#     balances[protocol] = amount\n",
-    "# balances"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -675,14 +643,14 @@
      "output_type": "stream",
      "text": [
       "ens: 83.07% | Balance: 16308526.164489243 | Total Claimed: 19632454.199476592\n",
-      "dydx: 41.40% | Balance: 69351276.63937142 | Total Claimed: 167511962.49729607\n",
-      "1inch: 553.95% | Balance: 463337538.94769806 | Total Claimed: 83642822.40415813\n",
+      "dydx: 41.40% | Balance: 69351276.63937144 | Total Claimed: 167511962.49729607\n",
+      "1inch: 553.95% | Balance: 463337538.947698 | Total Claimed: 83642822.40415813\n",
       "gemstone: 379.89% | Balance: 1.9144513323931466e+17 | Total Claimed: 5.0394775e+16\n",
-      "arbitrum: 130.23% | Balance: 1423180423.4554536 | Total Claimed: 1092811500.0\n",
-      "optimism: 190.65% | Balance: 316953675.8011883 | Total Claimed: 166252055.5245812\n",
-      "uniswap: 469.24% | Balance: 643052724.2253962 | Total Claimed: 137040499.276982\n",
-      "arkham: 22.83% | Balance: 6709524.230247119 | Total Claimed: 29394517.342645075\n",
-      "lido: 515.20% | Balance: 20458903.330653135 | Total Claimed: 3971044.797424059\n",
+      "arbitrum: 130.23% | Balance: 1423180423.4554534 | Total Claimed: 1092811500.0\n",
+      "optimism: 190.65% | Balance: 316953675.80118835 | Total Claimed: 166252055.5245812\n",
+      "uniswap: 469.24% | Balance: 643052724.2253964 | Total Claimed: 137040499.276982\n",
+      "arkham: 22.83% | Balance: 6709524.2302471185 | Total Claimed: 29394517.342645075\n",
+      "lido: 515.20% | Balance: 20458903.33065314 | Total Claimed: 3971044.797424059\n",
       "tornado: 82.40% | Balance: 411992.5404550038 | Total Claimed: 500000.00000000006\n"
      ]
     }
@@ -722,57 +690,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div><style>\n",
-       ".dataframe > thead > tr,\n",
-       ".dataframe > tbody > tr {\n",
-       "  text-align: right;\n",
-       "  white-space: pre-wrap;\n",
-       "}\n",
-       "</style>\n",
-       "<small>shape: (1, 1)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>amount</th></tr><tr><td>f64</td></tr></thead><tbody><tr><td>4.786738206636895426e6</td></tr></tbody></table></div>"
-      ],
-      "text/plain": [
-       "shape: (1, 1)\n",
-       "┌────────────────────────┐\n",
-       "│ amount                 │\n",
-       "│ ---                    │\n",
-       "│ f64                    │\n",
-       "╞════════════════════════╡\n",
-       "│ 4.786738206636895426e6 │\n",
-       "└────────────────────────┘"
-      ]
-     },
-     "execution_count": 94,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ens: 46.74% | Balance: 9175886.608028274 | Total Claimed: 19632454.199476592\n",
+      "dydx: 13.56% | Balance: 22708853.8403148 | Total Claimed: 167511962.49729607\n",
+      "1inch: 58.67% | Balance: 49077174.96056066 | Total Claimed: 83642822.40415813\n",
+      "gemstone: 95.01% | Balance: 4.7880906248786376e+16 | Total Claimed: 5.0394775e+16\n",
+      "arbitrum: 28.64% | Balance: 312937356.2013145 | Total Claimed: 1092811500.0\n",
+      "optimism: 48.21% | Balance: 80151352.89150001 | Total Claimed: 166252055.5245812\n",
+      "uniswap: 43.69% | Balance: 59878693.30759991 | Total Claimed: 137040499.276982\n",
+      "arkham: 19.79% | Balance: 5818423.308377025 | Total Claimed: 29394517.342645075\n",
+      "lido: 65.75% | Balance: 2610834.1729569724 | Total Claimed: 3971044.797424059\n",
+      "tornado: 33.71% | Balance: 168571.85945653016 | Total Claimed: 500000.00000000006\n"
+     ]
     }
    ],
-   "source": [
-    "(\n",
-    "        dfs['uniswap']['transfer']\n",
-    "        .filter(\n",
-    "            (pl.col('sender').is_in(claimant_df['receiver'])) &\n",
-    "            (pl.col('receiver').is_in(exchange_addresses_set))\n",
-    "        )\n",
-    "        .sort(by=[\"blockNumber\", \"transactionIndex\", \"logIndex\"])\n",
-    "        .group_by([\"sender\", \"receiver\"], maintain_order=True)\n",
-    "        .agg(pl.col(\"amount\").first())\n",
-    "        .select(pl.col(\"amount\").sum())\n",
-    "        .collect()  # Collect the aggregated data\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 119,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "def compute_distribution_stats(protocol, dfs, exchange_addresses_set):\n",
     "    # Extract unique claimants using lazy operations\n",
@@ -799,117 +736,19 @@
     "    )\n",
     "\n",
     "    # Calculate the total claim amount using lazy evaluation\n",
-    "    total_claim_amount = dfs[protocol]['claim'].select(pl.col('amount').sum()).collect().item()\n",
-    "\n",
-    "    # Calculate percentage balance\n",
-    "    percentage_balance = (balance / total_claim_amount) * 100 if total_claim_amount != 0 else 0\n",
-    "\n",
-    "    # Output\n",
-    "    print(f\"{protocol}: {percentage_balance:.2f}% | Balance: {balance} | Total Claimed: {total_claim_amount}\")\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 120,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ens: 46.74% | Balance: 9175886.608028274 | Total Claimed: 19632454.199476592\n",
-      "dydx: 13.56% | Balance: 22708853.8403148 | Total Claimed: 167511962.49729607\n",
-      "1inch: 58.67% | Balance: 49077174.96056065 | Total Claimed: 83642822.40415813\n",
-      "gemstone: 95.01% | Balance: 4.788090624878638e+16 | Total Claimed: 5.0394775e+16\n",
-      "arbitrum: 28.64% | Balance: 312937356.2013145 | Total Claimed: 1092811500.0\n",
-      "optimism: 48.21% | Balance: 80151352.89150001 | Total Claimed: 166252055.5245812\n",
-      "uniswap: 43.69% | Balance: 59878693.30759989 | Total Claimed: 137040499.276982\n",
-      "arkham: 19.79% | Balance: 5818423.308377025 | Total Claimed: 29394517.342645075\n",
-      "lido: 65.75% | Balance: 2610834.1729569724 | Total Claimed: 3971044.797424059\n",
-      "tornado: 33.71% | Balance: 168571.8594565302 | Total Claimed: 500000.00000000006\n"
-     ]
-    }
-   ],
-   "source": [
-    "for protocol in protocols:\n",
-    "        compute_distribution_stats(protocol, dfs, exchange_addresses_set)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 121,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ens: 46.74% | Balance: 9175886.608028246 | Total Claimed: 19632454.199476592\n",
-      "dydx: 13.56% | Balance: 22708853.84031451 | Total Claimed: 167511962.49729607\n",
-      "1inch: 58.67% | Balance: 49077174.96056054 | Total Claimed: 83642822.40415813\n",
-      "gemstone: 95.01% | Balance: 4.788090624878644e+16 | Total Claimed: 5.0394775e+16\n",
-      "arbitrum: 28.64% | Balance: 312937356.2012874 | Total Claimed: 1092811500.0\n",
-      "optimism: 48.21% | Balance: 80151352.89152807 | Total Claimed: 166252055.5245812\n",
-      "uniswap: 43.69% | Balance: 59878693.307599925 | Total Claimed: 137040499.276982\n",
-      "arkham: 19.79% | Balance: 5818423.308377282 | Total Claimed: 29394517.342645075\n",
-      "lido: 65.75% | Balance: 2610834.17295697 | Total Claimed: 3971044.797424059\n",
-      "tornado: 33.71% | Balance: 168571.85945652984 | Total Claimed: 500000.00000000006\n"
-     ]
-    }
-   ],
-   "source": [
-    "# General airdrop distribution statistics\n",
-    "for protocol in protocols:\n",
-    "    # Extract unique claimants using lazy operations\n",
-    "    claimant_df = dfs[protocol]['claim'].select(\n",
-    "        pl.col('receiver')).unique().collect()\n",
-    "\n",
-    "    # Filter and aggregate data using lazy operations\n",
-    "    data = (\n",
-    "        dfs[protocol]['transfer']\n",
-    "        .filter(\n",
-    "            (pl.col('sender').is_in(claimant_df['receiver'])) &\n",
-    "            (pl.col('receiver').is_in(exchange_addresses_set))\n",
-    "        )\n",
-    "        .sort(by=[\"blockNumber\", \"transactionIndex\", \"logIndex\"])\n",
-    "        .collect()  # Collect the aggregated data\n",
-    "    )\n",
-    "\n",
-    "    visited = set()\n",
-    "    balance = 0\n",
-    "    for row in data.iter_rows(named=True):\n",
-    "        if row['sender'] not in visited:\n",
-    "            balance += float(row['amount'])\n",
-    "            visited.add(row['sender'])\n",
-    "\n",
-    "    # Calculate the total claim amount using lazy evaluation\n",
     "    total_claim_amount = dfs[protocol]['claim'].select(\n",
     "        pl.col('amount').sum()).collect().item()\n",
     "\n",
     "    # Calculate percentage balance\n",
-    "    percentage_balance = (balance / total_claim_amount) * 100\n",
+    "    percentage_balance = (balance / total_claim_amount) * \\\n",
+    "        100 if total_claim_amount != 0 else 0\n",
     "\n",
     "    # Output\n",
-    "    print(f\"{protocol}: {percentage_balance:.2f}% | Balance: {balance} | Total Claimed: {total_claim_amount}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ens: 46.74% | Balance: 9175886.608028274 | Total Claimed: 19632454.199476592\n",
-    "dydx: 13.56% | Balance: 22708853.8403148 | Total Claimed: 167511962.49729607\n",
-    "1inch: 58.67% | Balance: 49077174.96056065 | Total Claimed: 83642822.40415813\n",
-    "gemstone: 95.01% | Balance: 4.788090624878638e+16 | Total Claimed: 5.0394775e+16\n",
-    "arbitrum: 28.64% | Balance: 312937356.2013145 | Total Claimed: 1092811500.0\n",
-    "optimism: 48.21% | Balance: 80151352.89150001 | Total Claimed: 166252055.5245812\n",
-    "uniswap: 43.69% | Balance: 59878693.30759989 | Total Claimed: 137040499.276982\n",
-    "arkham: 19.79% | Balance: 5818423.308377025 | Total Claimed: 29394517.342645075\n",
-    "lido: 65.75% | Balance: 2610834.1729569724 | Total Claimed: 3971044.797424059\n",
-    "tornado: 33.71% | Balance: 168571.8594565302 | Total Claimed: 500000.00000000006"
+    "    print(f\"{protocol}: {percentage_balance:.2f}% | Balance: {balance} | Total Claimed: {total_claim_amount}\")\n",
+    "\n",
+    "\n",
+    "for protocol in protocols:\n",
+    "    compute_distribution_stats(protocol, dfs, exchange_addresses_set)"
    ]
   }
  ],
