--- a/notebooks/03-airdrop-eda.ipynb
+++ b/notebooks/03-airdrop-eda.ipynb
@@ -179,7 +179,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c45ec658a01f48f58b986cc103697c96",
+       "model_id": "95f8d2bd7e3e4b669f6705efcbd30960",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1727,30 +1727,21 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (1918732481.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[21]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mConsider only transfers realized after the block timestamp!!!\u001b[39m\n             ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "Consider only transfers realized after the block timestamp!!!"
+    "# Consider only transfers realized after the block timestamp!!!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are 3169 CEX addresses and 685 DEX addresses.\n",
+      "There are 3011 CEX addresses and 558 DEX addresses.\n",
       "There are 3569 exchange addresses in total.\n"
      ]
     }
@@ -1771,7 +1762,7 @@
     "\n",
     "# Output the number of addresses\n",
     "print(\n",
-    "    f\"There are {exchange_cex_addresses_df.shape[0]} CEX addresses and {exchange_dex_addresses_df.shape[0]} DEX addresses.\")\n",
+    "    f\"There are {exchange_cex_addresses_df['address'].unique().len()} CEX addresses and {exchange_dex_addresses_df['address'].unique().len()} DEX addresses.\")\n",
     "\n",
     "print(f\"There are {len(exchange_addresses_set)} exchange addresses in total.\")\n",
     "\n",
@@ -4471,15 +4462,6 @@
    "source": [
     "hop_distribution = load_hop_distribution_files()\n",
     "print(hop_distribution.keys())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "What about the first ever transfer?"
    ]
   },
   {
