--- a/notebooks/04-airdrop-token-sold-at-exchanges.ipynb
+++ b/notebooks/04-airdrop-token-sold-at-exchanges.ipynb
@@ -128,7 +128,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "14488ac7ccf142ff871b81f85926d57d",
+       "model_id": "c5b6d6396f32416f87246ec903b20fa4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -180,14 +180,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are 3169 CEX addresses and 685 DEX addresses.\n",
+      "There are 3011 CEX addresses and 558 DEX addresses.\n",
       "There are 3569 exchange addresses in total.\n"
      ]
     }
@@ -208,7 +208,7 @@
     "\n",
     "# Output the number of addresses\n",
     "print(\n",
-    "    f\"There are {exchange_cex_addresses_df.shape[0]} CEX addresses and {exchange_dex_addresses_df.shape[0]} DEX addresses.\")\n",
+    "    f\"There are {exchange_cex_addresses_df['address'].unique().len()} CEX addresses and {exchange_dex_addresses_df['address'].unique().len()} DEX addresses.\")\n",
     "\n",
     "print(f\"There are {len(exchange_addresses_set)} exchange addresses in total.\")\n",
     "\n",
