Added analyses for Optimism and Arbitrum

--- a/notebooks/03-airdrop-eda.ipynb
+++ b/notebooks/03-airdrop-eda.ipynb
@@ -179,7 +179,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "95f8d2bd7e3e4b669f6705efcbd30960",
+       "model_id": "0c042a44ec2f4a7e833da8afbc44ebfb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1734,7 +1734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1844,7 +1844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1912,7 +1912,7 @@
        "└───────────┴───────────┴───────────┴───────────┴───┴───────────┴───────────┴───────────┴──────────┘"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1925,7 +1925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1947,7 +1947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1968,13 +1968,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c41ae49dd4514878af5e6470bff640e3",
+       "model_id": "281c3a81b6974ddb865b4cc26aa0bcf1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2065,7 +2065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2112,7 +2112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2512,7 +2512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2577,13 +2577,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "169825ebd8f64dd284aeb150c8946963",
+       "model_id": "cf233a76426d4f65a8229ec40b00f078",
        "version_major": 2,
        "version_minor": 0
       },
@@ -4303,7 +4303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -4346,7 +4346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -4418,7 +4418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4434,13 +4434,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "98c30bf37abf417990395eb11ba1732d",
+       "model_id": "18999b9672824626a74f49dbeeabb923",
        "version_major": 2,
        "version_minor": 0
       },
@@ -4455,7 +4455,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dict_keys(['ens', 'dydx', '1inch', 'gemstone', 'uniswap', 'arkham', 'lido', 'tornado'])\n"
+      "dict_keys(['ens', 'dydx', '1inch', 'gemstone', 'arbitrum', 'optimism', 'uniswap', 'arkham', 'lido', 'tornado'])\n"
      ]
     }
    ],
@@ -4466,7 +4466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -4788,6 +4788,168 @@
        "\n",
        "   99%  max  \n",
        "0  1.0  1.0  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "arbitrum\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>min</th>\n",
+       "      <th>1%</th>\n",
+       "      <th>5%</th>\n",
+       "      <th>10%</th>\n",
+       "      <th>20%</th>\n",
+       "      <th>25%</th>\n",
+       "      <th>50%</th>\n",
+       "      <th>75%</th>\n",
+       "      <th>80%</th>\n",
+       "      <th>90%</th>\n",
+       "      <th>95%</th>\n",
+       "      <th>99%</th>\n",
+       "      <th>max</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>567261.0</td>\n",
+       "      <td>1.686571</td>\n",
+       "      <td>0.731133</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>31.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      count      mean       std  min   1%   5%  10%  20%  25%  50%  75%  80%  \\\n",
+       "0  567261.0  1.686571  0.731133  1.0  1.0  1.0  1.0  1.0  1.0  2.0  2.0  2.0   \n",
+       "\n",
+       "   90%  95%  99%   max  \n",
+       "0  2.0  3.0  4.0  31.0  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "optimism\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>min</th>\n",
+       "      <th>1%</th>\n",
+       "      <th>5%</th>\n",
+       "      <th>10%</th>\n",
+       "      <th>20%</th>\n",
+       "      <th>25%</th>\n",
+       "      <th>50%</th>\n",
+       "      <th>75%</th>\n",
+       "      <th>80%</th>\n",
+       "      <th>90%</th>\n",
+       "      <th>95%</th>\n",
+       "      <th>99%</th>\n",
+       "      <th>max</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>153211.0</td>\n",
+       "      <td>1.470371</td>\n",
+       "      <td>0.938735</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>32.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      count      mean       std  min   1%   5%  10%  20%  25%  50%  75%  80%  \\\n",
+       "0  153211.0  1.470371  0.938735  1.0  1.0  1.0  1.0  1.0  1.0  1.0  2.0  2.0   \n",
+       "\n",
+       "   90%  95%  99%   max  \n",
+       "0  2.0  3.0  4.0  32.0  "
       ]
      },
      "metadata": {},
@@ -5125,8 +5287,7 @@
     "    print(protocol)\n",
     "    hops_dfs[protocol] = pd.Series(\n",
     "        hop_distribution[protocol])\n",
-    "    data = hops_dfs[protocol][hops_dfs[protocol] > 0]\n",
-    "    display(data.describe(percentiles=percentiles).to_frame().T)"
+    "    display(hops_dfs[protocol].describe(percentiles=percentiles).to_frame().T)"
    ]
   }
  ],
